    * 0044 FIX: LDAP: Fixed error with empty groups during non nested group sync...
    * 0045 FIX: LDAP: Fixed error when synchronizing non nested groups to roles
    * 0046 FIX: Allowing "-" chars in var names again...

    WATO:
    * 0053 New rule for configuring the display_name of a service...
    * 0048 FIX: Fixed locking issue on host diagnose page

    Notifications:
    * 0032 FIX: mail notification plugin: replace windows forbidden characters in mail images

    Reporting & Availability:
    * 0051 Option for showing timeline directly in availability table...
    * 0052 Visual colorization of availability according to levels...
    * 0054 New labelling options for availability table...
    * 0055 Allow grouping by host, host group or service group...
    * 0056 New concept of service periods in availability reporting...

    Event Console:
    * 0026 FIX: snmpd_mkevent.py: fixed crash on startup

    Livestatus:
    * 0023 FIX: table statehist: code cleanup / minor performance improvements


1.2.3i6:
    Core & Setup:
    * 0041 FIX: setup.py now handles non existing wwwuser gracefully...

    Checks & Agents:
    * 0040 Add agent plugin to test local hostname resolving...
    * 0020 FIX: Inventory problem with inventory_processes parameter...

    Multisite:
    * 0000 Improved performance of LDAP sync by refactoring the group sync code

    WATO:
    * 0042 FIX: Removed debug outputs from service inventory...


1.2.3i5:
    Core:
    * Automatically remove duplicate checks when monitoring with Agent+SNMP
       at the same time. TCP based ones have precedence.
    * inventory check of SNMP devices now does scan per default (configurable)
    * FIX: inventory check now honors settings for exit code
    * FIX: avoid exception nodes of cluster have different agent type
    * FIX: continue inventory, if one check does not support it
    * FIX: fix configuration of explicit SNMP community, allow unicode