@@ -1,0 +1,8 @@
+Title: WATO forms: incorrect handling of checkbox state
+Level: 1
+Component: wato
+Version: 1.2.3i7
+Date: 1383917396
+Class: fix
+
+
