@@ -583,8 +583,8 @@ class html:
             form_name = self.form_name
 
         return self.has_var("filled_in") and (
-            self.form_name == None or \
-            self.form_name in self.list_var("filled_in"))
+            form_name == None or \
+            form_name in self.list_var("filled_in"))
 
 
     # Get value of checkbox. Return True, False or None. None means
@@ -594,7 +594,7 @@ class html:
     def get_checkbox(self, varname, form_name = None):
         if self.has_var(varname):
             return not not self.var(varname)
-        elif not self.form_filled_in():
+        elif not self.form_filled_in(form_name):
             return None
         else:
             # Form filled in but variable missing -> Checkbox not checked
