@@ -22,6 +22,7 @@
     WATO:
     * 0053 New rule for configuring the display_name of a service...
     * 0048 FIX: Fixed locking issue on host diagnose page
+    * 0033 FIX: WATO forms: incorrect handling of checkbox state
 
     Notifications:
     * 0032 FIX: mail notification plugin: replace windows forbidden characters in mail images
